# dmtypetraits

./: CMakeLists.txt  README.md  build.bat  build.sh  build_clang.bat  build_clang.sh
.github/workflows/: linux.yml  mac.yml  win.yml
examples/dmrouter/: main.cpp
examples/dmtypetraits/: main.cpp
examples/dmtypetraits_function/: dmtypetraits_function.cpp  main.cpp
examples/dmtypetraits_md5/: dmtypetraits_md5.cpp
examples/dmtypetraits_meta/: buildpkg.sh  dmstruct.meta.h  dmstruct.pkg  dmstruct_test.h  dmtypetraits_meta.cpp  main.cpp
examples/dmtypetraits_pack/: dmtypetraits_pack.cpp  main.cpp
examples/dmtypetraits_reflection/: main.cpp
examples/dmtypetraits_typelist/: main.cpp
include/: dmbase_typetraits.h  dmcast.h  dmcore_typetraits.h  dmfix_win_utf8.h  dminterface_traits.h  dmjson.h  dmmoduleptr.h  dmrouter.h  dmtypetraits.h  dmtypetraits_base.h  dmtypetraits_config.h  dmtypetraits_config.h.in  dmtypetraits_core.h  dmtypetraits_extensions.h  dmtypetraits_function.h  dmtypetraits_logical.h  dmtypetraits_md5.h  dmtypetraits_pack.h  dmtypetraits_pack_impl.h  dmtypetraits_platformhash.h  dmtypetraits_reflection.h  dmtypetraits_reflection_intrusive.h  dmtypetraits_typelist.h
src/libdmtypetraits/: libdmtypetraits.def  libdmtypetraits_impl.cpp  libdmtypetraits_impl.h
test/dmtypetraits_json/: buildpkg.bat  dmstruct_test.h  dmtypetraits_json.cpp  main.cpp
test/dmtypetraitstest/: dmtypetraitstest.cpp
